--- a/home-page-front/src/styles.css
+++ b/home-page-front/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("../node_modules/reset-css/reset.css");
+@import url("assets/styles/fonts.css");
+
+body {
+    background-color: #92C186;
+}
+
