--- a/home-page-front/src/app/footer/footer.component.html
+++ b/home-page-front/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
 <footer>
-  <p>rodapé</p>
+  <img src="assets/images/logo.png" alt="LTT" width="80px"/>
+  <p> - Let's Try Technology</p>
 </footer>
