--- a/home-page-front/src/app/header/header.component.css
+++ b/home-page-front/src/app/header/header.component.css
@@ -5,14 +5,14 @@ header {
 }
 
 nav ul {
-    bottom: 0;
+    bottom: 10px;
     right: 0;
     position: absolute;
 }
 
 li {
     display: inline;
-    margin: 0 20px;
+    margin-right: 400px;
 }
 
 a {
