--- a/home-page-front/src/app/header/header.component.html
+++ b/home-page-front/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <h1>
-    <img alt="Let's try Technology" />
+    <img src="assets/images/logo-txt.png" alt="Let's try Technology" />
   </h1>
   <nav>
     <ul>
