--- a/home-page-front/src/app/footer/footer.component.html
+++ b/home-page-front/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer>
-  <img src="assets/images/logo.png" alt="LTT" width="80px"/>
+  <img src="assets/images/logo.png" alt="LTT" />
   <p> - Let's Try Technology</p>
 </footer>
