--- a/home-page-front/src/app/home/home.component.html
+++ b/home-page-front/src/app/home/home.component.html
@@ -1,13 +1,16 @@
 <section>
   <h2>Objetivo</h2>
+  <img src="assets/images/flecha_model_3.png" />  
   <p>  
     Ajudar empresas de pequeno e médio porte a aprimorar seus processos, propor soluções a problemas e atingir
     seus objetivos de forma rápida através de soluções tecnológicas.
   </p>
+  
 </section>
 
 <section>
   <h2>Onde atuamos</h2>
+  <img src="assets/images/place.png" />
   <p>  
       Desenvolvimento, manutenção e consultoria em tecnologia da informação e soluções tecnológicas.
       Além de disso temos soluções já prontas para uso no seu negócio
@@ -16,6 +19,7 @@
 
 <section>
   <h2>Como trabalhamos</h2>
+  <img src="assets/images/how-works.png" />
   <p>
     Atuamos junto aos nossos clientes durante o desenvolvimento, focando em entregas contínuas,
     alinhando expectativas e gerando valor com rapidez e qualidade.
