--- a/home-page-front/src/app/home/home.component.html
+++ b/home-page-front/src/app/home/home.component.html
@@ -4,8 +4,7 @@
   <p>  
     Ajudar empresas de pequeno e médio porte a aprimorar seus processos, propor soluções a problemas e atingir
     seus objetivos de forma rápida através de soluções tecnológicas.
-  </p>
-  
+  </p>  
 </section>
 
 <section>
@@ -21,7 +20,16 @@
   <h2>Como trabalhamos</h2>
   <img src="assets/images/how-works.png" />
   <p>
-    Atuamos junto aos nossos clientes durante o desenvolvimento, focando em entregas contínuas,
+    Atuamos junto aos nossos clientes durante todo o desenvolvimento, focando em entregas contínuas,
     alinhando expectativas e gerando valor com rapidez e qualidade.
+  </p>
+</section>
+
+<section>
+  <h2>Nossas soluções</h2>
+  <img src="assets/images/solution.jpg" />
+  <p>
+    <strong>Sistemas de cotações da bolsa</strong> fornece as cotações da bolsa de valores em tempo real, é possível
+    visualizar via interface gráfica e através da API Restful para fácil integração.
   </p>
 </section>
