--- a/home-page-front/src/app/header/header.component.html
+++ b/home-page-front/src/app/header/header.component.html
@@ -4,8 +4,8 @@
   </h1>
   <nav>
     <ul>
-      <li><a href="#">Membros</a></li>
-      <li><a href="#">Fale Conosco</a></li>
+      <li><a [routerLink]="" (click)="linkMembersPage()">Membros</a></li>
+      <li><a [routerLink]="">Fale Conosco</a></li>
     </ul>
   </nav>
 </header>
