--- a/home-page-front/src/app/members/members.component.html
+++ b/home-page-front/src/app/members/members.component.html
@@ -1,15 +1,6 @@
 <section>
-  <img src="assets/images/flecha_model_3.png"/>
-</section>
-
-<section>
-  <img src="assets/images/flecha_model_3.png"/>
-</section>
-
-<section>
-  <img src="assets/images/flecha_model_3.png"/>
-</section>
-
-<section>
-  <img src="assets/images/flecha_model_3.png"/>
+  <img src="assets/images/bruno.jpg"/>
+  <img src="assets/images/edson.jpg"/>
+  <img src="assets/images/felipe.jpg"/>
+  <img src="assets/images/murilo.jpg"/>
 </section>
