contact us page finished

--- a/home-page-front/src/app/header/header.component.html
+++ b/home-page-front/src/app/header/header.component.html
@@ -11,3 +11,4 @@
     </ul>
   </nav>
 </header>
+<app-contact-us *ngIf="showContactUsPage" (closePage)="onCloseContactUsPage()"></app-contact-us>  
