--- a/home-page-front/src/app/contact-us/contact-us.component.css
+++ b/home-page-front/src/app/contact-us/contact-us.component.css
@@ -39,17 +39,35 @@ section {
     background-color: white;
     width: 20em;
     height:31.3em;
-    margin: 1.6% 2%;
+    margin: 5% auto 0 auto;
     padding-top: 1em;
 }
 
 button {
     border-radius: 15px;
-    background-color: #1DADEE;
+    
     border: 0;
     width: 44%;
     height: 2em;
     margin: 5% 2.75% 0% 2.75%;
     font-size: 1.1em;
     color: white;   
+}
+
+.button-enviar {
+    background-color: #1DADEE;
+}
+
+.button-fechar {
+    background-color: #ec6048;
+}
+
+div {
+    display : block; 
+    width: 100%;    
+    height: 100%;
+    background : rgba(50,50,50,0.5);
+    position : fixed;
+    top : 0;
+    z-index : 500;
 }
