--- a/home-page-front/src/app/contact-us/contact-us.component.html
+++ b/home-page-front/src/app/contact-us/contact-us.component.html
@@ -1,17 +1,19 @@
-<section>
-  <h2>Fale conosco</h2>
-  <label>
-    Nome:<input type="text" />
-  </label>
-  <label>
-    Email:<input type="email" />
-  </label>
-  <label>
-    Telefone:<input type="tel" />
-  </label>
-  <label>
-    Mensagem:<textarea></textarea>
-  </label>
-  <button>Limpar</button>
-  <button>Enviar</button>
-</section>
+<div>
+  <section>
+    <h2>Fale conosco</h2>
+    <label>
+      Nome:<input type="text" />
+    </label>
+    <label>
+      Email:<input type="email" />
+    </label>
+    <label>
+      Telefone:<input type="tel" />
+    </label>
+    <label>
+      Mensagem:<textarea></textarea>
+    </label>
+    <button class="button-fechar" (click)="closePage.emit()">Fechar</button>
+    <button class="button-enviar">Enviar</button>
+  </section>
+</div>
