--- a/home-page-front/src/app/contact-us/contact-us.component.css
+++ b/home-page-front/src/app/contact-us/contact-us.component.css
@@ -51,6 +51,7 @@ button {
     margin: 5% 2.75% 4% 2.75%;
     font-size: 1.1em;
     color: white;   
+    cursor: pointer;
 }
 
 .button-enviar {
@@ -76,6 +77,7 @@ button {
     width: 90%;
     border-radius: 15px;
     margin: 2% 5% 4% 5%;
+    cursor: pointer;
 }
 
 p {    
